--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-limine = "0.1"
+limine = { path = "limine-rs" }
 spin = "0.9"
 
 [profile.dev]
